Kubernetes-Manifests-file/UI/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: yelb-ui
  namespace: three-tier
  labels:
    app: yelb-ui
spec:
  type: ClusterIP
  selector:
    app: yelb-ui
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
